# Assignment---VideoStream-App

./: .gitignore  README.md  TEST_CASES.md  app.json  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tsconfig.json
__tests__/: EffectSwitcher.test.tsx  effects.test.ts  useFrameMetrics.test.ts
android/: build.gradle  gradle.properties  gradlew  settings.gradle
android/app/: build.gradle  debug.keystore  proguard-rules.pro
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/cpp/tests/: CMakeLists.txt  test_image_processor.cpp
android/app/src/main/java/com/edgevision/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/edgevision/edgedetection/: EdgeDetectionPackage.kt  EdgeDetectionView.kt  EdgeDetectionViewManager.kt  NativeProcessor.kt
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml  styles.xml
cpp/: ImageProcessor.cpp  ImageProcessor.h
ios/: Podfile
ios/EdgeVision/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard  main.m
ios/EdgeVision/EdgeDetection/: EdgeDetectionView.h  EdgeDetectionView.mm  EdgeDetectionViewManager.mm
src/: App.tsx
src/components/: Controls.tsx  EffectSwitcher.tsx  FpsOverlay.tsx  StatusOverlay.tsx
src/constants/: effects.ts
src/hooks/: useCameraPermission.ts  useFrameMetrics.ts
src/native/: EdgeDetectionView.tsx
src/types/: index.ts
